--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "test": "npm run lint && npm run unit && npm run cover",
     "lint": "jshint . && jscs -c .jscs.js .",
     "unit": "mocha test/**/*.test.js",
-    "cover": "istanbul cover _mocha -- ./test/**/*.test.js"
+    "cover": "istanbul cover _mocha -- ./test/**/*.test.js",
+    "example": "enb -d examples/silly make clean && enb -d examples/silly make __magic__"
   }
 }
