--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": ">= 0.10.0"
   },
   "peerDependencies": {
-    "enb": ">= 0.13.0"
+    "enb": ">= 0.13.0 < 1.0.0"
   },
   "dependencies": {
     "vow": "0.4.5"
