--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "vow": "0.4.5"
   },
   "devDependencies": {
-    "enb": ">= 0.13.0",
+    "enb": ">= 0.13.0 < 1.0.0",
     "mocha": "1.21.4",
     "must": "0.12.0",
-    "jshint": "2.5.5",
-    "jscs": "1.6.0",
-    "istanbul": "0.3.0"
+    "jshint": "2.5.6",
+    "jscs": "1.6.2",
+    "istanbul": "0.3.2"
   },
   "main": "lib/magic-factory.js",
   "scripts": {
