--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "repository": "git://github.com/enb-bem/enb-magic-factory",
   "homepage": "https://github.com/enb-bem/enb-magic-factory",
   "bugs": "https://github.com/enb-bem/enb-magic-factory/issues",
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/enb-bem/enb-magic-factory/blob/master/LICENSE"
-  }],
+  "licenses": [
+    {
+      "type": "MPL-2.0",
+      "url": "https://github.com/enb-bem/enb-magic-factory/blob/master/LICENSE.txt"
+    }
+  ],
   "engines": {
     "node": ">= 0.10.0"
   },
