--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   },
   "devDependencies": {
     "enb": ">= 0.13.0 < 1.0.0",
-    "mocha": "2.0.1",
-    "must": "0.12.0",
-    "jshint": "2.5.10",
-    "jscs": "1.8.0",
-    "istanbul": "0.3.2"
+    "istanbul": "0.3.5",
+    "jscs": "1.9.0",
+    "jshint": "2.5.11",
+    "mocha": "2.1.0",
+    "must": "0.12.0"
   },
   "main": "lib/index.js",
   "scripts": {
